scrollbar + ie fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -473,8 +473,8 @@ button:focus {
 ----------------------------------------*/
 #fs-menu {
   position: fixed;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: block;
   z-index: 9999;
   overflow: hidden;
@@ -542,15 +542,17 @@ button:focus {
         #fs-menu .container .row .logo img,
         #fs-menu .container .row .logo svg {
           width: 240px;
-          height: auto; }
+          height: 50px; }
           @media only screen and (max-width: 767px) {
             #fs-menu .container .row .logo img,
             #fs-menu .container .row .logo svg {
-              width: 220px; } }
+              width: 220px;
+              height: 45px; } }
           @media only screen and (max-width: 575px) {
             #fs-menu .container .row .logo img,
             #fs-menu .container .row .logo svg {
-              width: 200px; } }
+              width: 200px;
+              height: 40px; } }
           @media only screen and (max-width: 767px) {
             #fs-menu .container .row .logo img .text,
             #fs-menu .container .row .logo svg .text {
@@ -684,16 +686,17 @@ button:focus {
     #top-menu .logo img,
     #top-menu .logo svg {
       width: 300px;
-      height: auto; }
+      height: 60px; }
       @media only screen and (max-width: 1360px) {
         #top-menu .logo img,
         #top-menu .logo svg {
           width: 250px;
-          height: auto; } }
+          height: 50px; } }
       @media only screen and (max-width: 767px) {
         #top-menu .logo img,
         #top-menu .logo svg {
-          width: 200px; } }
+          width: 200px;
+          height: 40px; } }
       #top-menu .logo img path,
       #top-menu .logo img polygon,
       #top-menu .logo img rect,
@@ -744,8 +747,14 @@ button:focus {
         -webkit-transition: .3s;
         transition: .3s;
         padding: 0 1px; }
+        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+          #top-menu .right-menu li a.title-small {
+            background: transparent; } }
         #top-menu .right-menu li a.title-small:hover, #top-menu .right-menu li a.title-small:focus {
           background-position: 0 110%; }
+          @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+            #top-menu .right-menu li a.title-small:hover, #top-menu .right-menu li a.title-small:focus {
+              color: #e12a55; } }
     #top-menu .right-menu .social {
       padding-left: 20px; }
       @media only screen and (max-width: 1360px) {
@@ -862,11 +871,12 @@ button:focus {
     #footer .logo img,
     #footer .logo svg {
       width: 200px;
-      height: auto; }
+      height: 40px; }
       @media only screen and (max-width: 575px) {
         #footer .logo img,
         #footer .logo svg {
-          width: 150px; } }
+          width: 150px;
+          height: 30px; } }
   #footer p {
     color: #fff;
     text-align: right;
@@ -888,7 +898,8 @@ button:focus {
   .popup.hire-me form .input-field {
     display: block;
     margin-top: 0;
-    margin-bottom: 30px; }
+    margin-bottom: 30px;
+    text-align: left; }
     @media only screen and (max-width: 1200px) {
       .popup.hire-me form .input-field {
         margin-bottom: 20px; } }
@@ -937,6 +948,11 @@ button:focus {
 	## HOME
 ------------------------------------------
 ----------------------------------------*/
+body.home .body-scroll {
+  overflow: hidden;
+  height: 100%;
+  height: 100vh; }
+
 body.home #lines {
   position: fixed;
   z-index: 0;
@@ -1761,8 +1777,14 @@ body.home #contact-me {
         transition: .3s;
         padding: 0 1px;
         line-height: 1; }
+        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+          body.home #contact-me .top .right p .links a {
+            background: transparent; } }
         body.home #contact-me .top .right p .links a:hover, body.home #contact-me .top .right p .links a:focus {
           background-position: 0 110%; }
+          @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+            body.home #contact-me .top .right p .links a:hover, body.home #contact-me .top .right p .links a:focus {
+              color: #e12a55; } }
   body.home #contact-me .bottom {
     padding-bottom: 130px; }
     @media only screen and (max-width: 1660px) {
