--- a/assets/scss/inc/fs-menu.scss
+++ b/assets/scss/inc/fs-menu.scss
@@ -6,8 +6,8 @@
 
 #fs-menu {
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: block;
     z-index: 9999;
     overflow: hidden;
@@ -93,14 +93,16 @@
                 img,
                 svg {
                     width: 240px;
-                    height: auto;
+                    height: 50px;
 
                     @media #{$mq-sm-max} {
                         width: 220px;
+                        height: 45px;
                     }
 
                     @media #{$mq-xs-max} {
                         width: 200px;
+                        height: 40px;
                     }
 
                     .text {
