--- a/assets/scss/inc/popups.scss
+++ b/assets/scss/inc/popups.scss
@@ -14,6 +14,7 @@
                 display: block;
                 margin-top: 0;
                 margin-bottom: 30px;
+                text-align: left;
 
                 @media #{$mq-lg-max} {
                     margin-bottom: 20px;
